--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -136,23 +136,21 @@ HKの2段目からは強ノヴァが繋がらない。
 
 - 6HK, 2MP-HK, SA1: 3780
 
-## {近} 6HK(pc)
+## 6HK(pc)
 
 - 6HK(pc), 4HP, 強ニー, 弱アッパー: 3610
 - {端} 6HK(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h: 4000
 - 6HK(pc), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h: 3868
 - 6HK(pc), 4HP, 強ニー, ODアッパー: 3960
+- {端} 6HK(pc), HK, ODノヴァ, 4HP, 強アッパー-h: 4270
 - 6HK(pc), HK, 強ノヴァ, 弱ニー: 2980 42F
 - 6HK(pc), 6HK, 2MP-HK, SA1: 4200
 - 6HK(pc), 6HK, 2MP-HK, SA2: 4637
 - 6HK(pc), 4HP, 強ニー, 弱アッパー, SA3: 5610
+- 6HK(pc), HK, DR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5927
 - 6HK(pc), HK, DR 6HK, HK, DR 6HK, HK(1), 強ノヴァ, 4HP, 強ニー, 中アッパー, SA3: 6108
 
-## {遠} 6HK(pc)
-
 遠いと4HPが届かない。
-
-- {端} 6HK(pc), HK, ODノヴァ, 4HP, 強アッパー-h: 4270
 
 ## {空} 6HK
 
