--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -107,7 +107,9 @@
 
 ## 強アッパー-h: 23
 
-- 中ショット
+- 強ショット: しゃがみ技を出さないと当たる、ガードで+11
+  - 中ショット, {前方ジャンプ}, 中アッパー
+- 中ニー(+8): 暴れていると(+6)で当たる
 
 演出が入って中央でも端でも同じ状況になるので攻めやすい。
 
