--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -12,14 +12,14 @@
 
 ### 飛び道具と対空
 
+（ダミー設定 > ガード: すべてガード）
 （ダミー設定 > 起き上がり: ランダム）
-（反撃設定 > ダウンリバーサル: 前方ジャンプ/何もしない）
-（反撃設定 > ガードリバーサル: 前方ジャンプ/何もしない）
-（反撃設定 > ダメージ復帰リバーサル: 前方ジャンプ/何もしない）
+（反撃設定 > ダウンリバーサル: 前方ジャンプ/垂直ジャンプ/何もしない）
+（反撃設定 > ガードリバーサル: 前方ジャンプ/垂直ジャンプ/何もしない）
 
 - 前進, 強ショット, ガード
 - 前進, 中ショット, 強ショット, ガード
-- {ジャンプ}, 中アッパー, 中ショット
+- {前方ジャンプ}, 中アッパー, 中ショット
 
 前進からショットでアッパーが漏れないようにする。
 
@@ -35,6 +35,10 @@
   - 中ショット, 強ショット, ガード
 
 自分が技を出してない時に狙う、リターンの高い対空。
+
+### 昇竜やSAの確反
+
+- 6HK(pc), HK, 強ノヴァ, DR 4HP, 強アッパー-h
 
 ### インパクト返しのコンボ
 
@@ -76,3 +80,8 @@
       - {中} 強ショット
       - {端}
 - MK(g), ガード
+
+### Dリバの確反
+
+- MP(pc), HK(1), 強ノヴァ, 強アッパー, ステップ, MP, ...
+- {端} MP(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h
