--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -17,9 +17,14 @@
 - 6LK(c), LP, 中アッパー: 1890
 - 6LK(c), LP, ODアッパー: 2010
 
-## 6LK(pc)
+## 6LK(+4)
 
-- 6LK(pc), 2MP-HK, SA1: 2960
+- 6LK(+4), 2MP, 強アッパー: 2080
+- 6LK(+4), 2MP, 強ニー: 1960
+- 6LK(+4), 2MP-HK, SA1: 2820
+- 6LK(+4), 2MP-HK, SA2: 3220 (2:3070)
+- 6LK(+4), 2MP, 強アッパー: 4080
+- 6LK(+4), 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 4341
 
 ## MP
 
@@ -135,6 +140,7 @@ HKの2段目からは強ノヴァが繋がらない。
 ## 6HK
 
 - 6HK, 2MP-HK, SA1: 3780
+- 6HK, 2MP-HK, SA2: 4340 (2:4130)
 
 ## 6HK(pc)
 
@@ -145,7 +151,7 @@ HKの2段目からは強ノヴァが繋がらない。
 - {端} 6HK(pc), HK, ODノヴァ, 4HP, 強アッパー-h: 4270
 - 6HK(pc), HK, 強ノヴァ, 弱ニー: 2980 42F
 - 6HK(pc), 6HK, 2MP-HK, SA1: 4200
-- 6HK(pc), 6HK, 2MP-HK, SA2: 4637
+- 6HK(pc), 6HK, 2MP-HK, SA2: 4637 (2:4475)
 - 6HK(pc), 4HP, 強ニー, 弱アッパー, SA3: 5610
 - 6HK(pc), HK, DR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5927
 - 6HK(pc), HK, DR 6HK, HK, DR 6HK, HK(1), 強ノヴァ, 4HP, 強ニー, 中アッパー, SA3: 6108
