--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -38,19 +38,17 @@
 
 ### 昇竜やSAの確反
 
-- 6HK(pc), HK, 強ノヴァ, DR 4HP, 強アッパー-h
+- 6HK(pc), HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3
 
 ### インパクト返しのコンボ
 
 （ドライブインパクトへの対応練習）
 
-- DI(pc), ステップ, 4HP, 強アッパー-h
-  - 中ショット, 強ショット, ガード
+- DI(pc), ステップ, 4HP, 強アッパー-h, SA3
 
 ### 壁インパクトのコンボ
 
-- DI(壁), 4HP, 強アッパー-h
-  - 中ショット, 強ショット, ガード
+- DI(壁), 4HP, 強アッパー-h, SA3
 
 ### ラッシュ下段 1
 
@@ -85,3 +83,7 @@
 
 - MP(pc), HK(1), 強ノヴァ, 強アッパー, ステップ, MP, ...
 - {端} MP(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h
+
+### 昇竜やSAの確反 2
+
+- 6HK(pc), 6HK, 2MP-HK, SA1
