--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -6,6 +6,12 @@
 - 2LP, LP, CR 2LP, 4HP, 強ニー, 弱アッパー: 2045
 - 2LP, LP, CR 2LP, 4HP, 強ニー, 弱アッパー, SA3: 4045
 
+## 2LP(pc)
+
+- {端} 2LP(pc), ODニー, 弱アッパー: 2300
+- {端} 2LP(pc), ODニー, ODアッパー: 2600
+- {端} 2LP(pc), ODニー, 弱アッパー, SA3: 4300
+
 ## 2LK
 
 2LP, LPと同じ。
@@ -28,9 +34,12 @@
 
 ## MP
 
-- MP, LP/2LP, 強アッパー: 2020
+- MP, MP, LP, 中アッパー: 2420
 - MP, LP, 弱マイト: 1860
 - {端立} MP, LP, 弱グリード, 弱アッパー: 2550
+- MP, MP, LP, CR 2LP, 2MP, 強アッパー: 2595
+- MP, MP, LP, CR 2LP, 2MP, 中マイト: 2405
+- {端立} MP, MP, LP, CR 2LP, 2MP, 中グリード, 弱アッパー: 2660
 
 ## MP(+2)
 
@@ -63,6 +72,8 @@
 - 2MP(pc)-HP, ODノヴァ, 強アッパー: 3080
 - {立端} 2MP(pc)-HP, 中グリード, ODアッパー: 3220
 - {端} 2MP(pc)-HP, ODニー, ODアッパー: 3560
+- {端} 2MP(pc), ODノヴァ, 4HP, 強アッパー-h: 3620
+- {端} 2MP(pc), ODノヴァ, 4HP, 強アッパー-h, SA3:
 
 ## 2MP-HK
 
@@ -152,7 +163,11 @@ HKの2段目からは強ノヴァが繋がらない。
 - 6HK(pc), HK, 強ノヴァ, 弱ニー: 2980 42F
 - 6HK(pc), 6HK, 2MP-HK, SA1: 4200
 - 6HK(pc), 6HK, 2MP-HK, SA2: 4637 (2:4475)
+- 6HK(pc), HK, 強ノヴァ, 6HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 3990 (端から端まで運ぶ)
+- 6HK(pc), HK, 強ノヴァ, DR 2MP-HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 4132 (端から端まで運ぶ)
+- 6HK(pc), 6HK, 2MP-HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 4237
 - 6HK(pc), 4HP, 強ニー, 弱アッパー, SA3: 5610
+- 6HK(pc), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5528
 - 6HK(pc), HK, DR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5927
 - 6HK(pc), HK, DR 6HK, HK, DR 6HK, HK(1), 強ノヴァ, 4HP, 強ニー, 中アッパー, SA3: 6108
 
