--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -2,7 +2,17 @@
 
 投げ間合いの外。
 
+- 2LP: 無敵技以外で割り込めない
+  - 2MP: 短い技だと潰せる
+    - 弱ショット: -7で大足の外
+    - 中ネクサス: 無敵技以外で割り込めない
+    - 強ネクサス: 短い技を潰せる
+    - ガード: 差し返し狙い
+
 ## DR MP(g): 6
+
+めり込んだらガードされてもド密着でMPが強い。
+投げは最速だと空振りするので目押しで遅らせる。
 
 - MP(g): 連続ガード
   - MP, LP, 弱ショット: 無敵技以外で割り込めない、大足の外まで離して-7
@@ -13,12 +23,19 @@
 - DR 6MP
 - 強ニー(+3): 立ちガードで-2、しゃがみガードで+4の投げ間合い、当たって+40
 
+## DR 6MP(g): 2
+
+MP(g)とほぼ同じ。ヒット時もほぼ同じ。
+
 ## MK-HK: 38
 
 - 強ニー(+9): ガードされて+4、端かその場受け身には投げ間合い
 
 ## HP-HK: 39
 
+- DR 6LK: 下段、目押し
+- DR 6MP: 中段、目押し、後ろ受け身には最速で7F遅れ
+- {中央} 中ショット: 両受け身からジャンプが間に合わない
 - {端} 強ニー(+10): ガードされて+5、投げ間合いの外
 
 ## 4HP, 強ニー, 弱アッパー: 34
@@ -67,7 +84,11 @@
 
 ## マイト: 3
 
-ド密着。
+近いとド密着。最低でも投げ間合いにはなる。
+
+## マイト(c): 25
+
+- ステップ: +2
 
 ## {立} グリード(g): 4
 
@@ -105,6 +126,8 @@
   - {後方受け身, 前方ジャンプ}, 中アッパー: 対空が間に合う
 - {端} ステップ: +4
 
+MP, MP, LP, 中アッパーのように遠めで当てると持続当てになって29Fになる。
+
 ## 強アッパー-h: 23
 
 - 強ショット: しゃがみ技を出さないと当たる、ガードで+11
@@ -112,6 +135,10 @@
 - 中ニー(+8): 暴れていると(+6)で当たる
 
 演出が入って中央でも端でも同じ状況になるので攻めやすい。
+
+## ODアッパー: 25
+
+- {端} ステップ: +2
 
 ## {端} 弱ニー: 36
 
@@ -140,6 +167,10 @@
 
 距離で持続当てにした場合、+2までは投げ間合い。
 
+## SA1: 22
+
+- {端} 6MP(+1)
+
 ## SA2-2: 19
 
 補正40%なら180ダメージ減って、起き攻めできるようになる。リーサル以外ではこの派生にした方がいい。
@@ -147,3 +178,9 @@
 - 前進, 投げ
 
 ## SA3: 15
+
+- 中ショット: ガード後に強ショットをジャンプできない、しゃがみに当たらない
+- 弱ショット: 判定が前に出て無敵技に当たりやすい
+- 弱ニー: 立ちガードでも五分で投げ間合いの外
+- DR MP: ヒットで4HPが入る、密着できない
+- DR 2MK: 5F遅れ、ヒットで4HPが入る、密着できない
