--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -8,7 +8,7 @@
 ### ジャンプ・ラッシュ攻撃
 
 - J.HP/DR MP(h), 4HP, 強ニー, 弱アッパー, SA3
-- J.HP/DR MP(g), MP, 2LP, 弱ショット, ガード
+- J.HP/DR MP(g), 4HP, 中ショット
 
 ### 飛び道具と対空
 
@@ -38,7 +38,10 @@
 
 ### 昇竜やSAの確反
 
+（確定反撃の練習）
+
 - 6HK(pc), HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3
+- {端} 6HK(pc), HK, 強ノヴァ, 4HP, 強アッパー-h, SA3
 
 ### インパクト返しのコンボ
 
@@ -87,3 +90,8 @@
 ### 昇竜やSAの確反 2
 
 - 6HK(pc), 6HK, 2MP-HK, SA1
+
+### MP始動のコンボ
+
+- MP, MP(h), LP, 中昇竜, ステップ
+- MP, MP(g), 2MP, 弱ショット, ガード
