--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -7,19 +7,22 @@
 
 ## MP: 3-8
 
-- MP(c), 4HP, ...
-- MP(h), MP, LP, ...
-- MP(g)
-  - MP(h), LP, ...
-  - MP(g)
-    - 2MP, 弱ショット: 距離をとる
-    - 2HP: 弱攻撃を潰してパニカン
-
 ## DR 2MK: 17-21
 
 ## 6MP(+1): 22-23
 
-ヒットで2LPが繋がる。
+ヒットで2LP, LPが繋がる。
+
+## J.HP
+
+- J.HP(g), 4HP, 中ショット: +3
+  - {中央} LP, 弱ショット, ガード
+  - {端} 前投げ
+  - {端} 後退: シミー
+  - {端} MP, LP, ...
+  - {端} MP(c), 4HP, ...
+  - {端} MP(g), 2LP, 2MP, 弱ショット: 離れて-5、2MPの前に長い5F技で割り込める
+  - {端} MP(g), 後退(8F), 2LP, ODニー: 相手が小技を空振りしたら2LPが当たる
 
 ## 弱ニー(+8): 21-23
 
