--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -21,13 +21,18 @@
 
 ## 差し込みの選択肢
 
-- 2MP, 弱ショット: 無敵技以外で割り込めない、先端ならガードされても-6くらいで大足の外
-- 2MP, 弱ニー: 無敵技以外で割り込めない、先端ならガードされても-2くらいで大足の外
+- 2LP, 弱ショット
+- 2MP
+  - 弱ショット: 無敵技以外で割り込めない、先端ならガードされても-6くらいで大足の外
+  - 弱ニー: 無敵技以外で割り込めない、先端ならガードされても-2くらいで大足の外
+- 弱ニー
 - {端} ODニー: ガードされて-2の投げ間合い
-- 2HP, 弱ショット: 先端ならガードされても連続ガードの-5くらいで大足の外、インパクトを返しやすい
-- 2HP, 中ニー: 先端なら立ちガードされても-2の投げ間合い、しゃがみなら+2で投げ間合い
+- 2HP
+  - 弱ショット: 先端ならガードされても連続ガードの-5くらいで大足の外、インパクトを返しやすい
+  - 中ニー: 先端なら立ちガードされても-2の投げ間合い、しゃがみなら+2で投げ間合い
+- DR MP
 - MK: ヒット確認でTCから状況が良い、インパクトに弱い
-- 2HK: 下段、確反あり
+- HP: ドライブゲージを削る
 - 6LK: 下段、カウンターでコンボ
 - 中ニー: 遠めなら確反がない、しゃがんでいるとガードされても+2で投げ間合い
 - 強ショット: 速い弾
@@ -41,7 +46,9 @@
 ## 牽制の選択肢
 
 - MP: 全体24F、中/強ショットとモーションが似ていてフェイントになる
-- 2MP, 中ネクサス: 全体26F
+- 2MP: 全体26F
+  - 中ネクサス: 当たったら攻めの状況がいい
+  - 強ニー: 当たったらラインを上げられる
 
 ## 差し返しの選択肢
 
