--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -27,10 +27,6 @@
 
 MP(g)とほぼ同じ。ヒット時もほぼ同じ。
 
-## MK-HK: 38
-
-- 強ニー(+9): ガードされて+4、端かその場受け身には投げ間合い
-
 ## HP-HK: 39
 
 - DR 6LK: 下段、目押し
@@ -38,9 +34,20 @@ MP(g)とほぼ同じ。ヒット時もほぼ同じ。
 - {中央} 中ショット: 両受け身からジャンプが間に合わない
 - {端} 強ニー(+10): ガードされて+5、投げ間合いの外
 
+ラッシュしても強くはないので、中央ではとりあえず中ショットが無難。
+
 ## 4HP, 強ニー, 弱アッパー: 34
 
 - DR 6MP(+2): 中央では少し遠めだが2MPが繋がる
+
+## 6LK: 3
+
+- {近} MP: めり込んだらとりあえずMPが使いやすい
+- 2MP: ガードさせて中ネクサスや弱ショット
+
+## MK-HK: 38
+
+- 強ニー(+9): ガードされて+4、端かその場受け身には投げ間合い
 
 ## 2HK(pc): 45
 
