--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -24,7 +24,7 @@
 - 2LP, 弱ショット
 - 2MP
   - 弱ショット: 無敵技以外で割り込めない、先端ならガードされても-6くらいで大足の外
-  - 弱ニー: 無敵技以外で割り込めない、先端ならガードされても-2くらいで大足の外
+  - 中ネクサス: ガードさせて読み合い
 - 弱ニー
 - {端} ODニー: ガードされて-2の投げ間合い
 - 2HP
@@ -49,6 +49,8 @@
 - 2MP: 全体26F
   - 中ネクサス: 当たったら攻めの状況がいい
   - 強ニー: 当たったらラインを上げられる
+
+2MPの判定がとにかく強い。先端あたりで変な当たり方になる。
 
 ## 差し返しの選択肢
 
