--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -73,7 +73,16 @@ MP(g)とほぼ同じ。ヒット時もほぼ同じ。
 
 ## キャンセルネクサスの読み合い
 
-弱/中ネクサスはガードされて-5だが発生が早い、強/ODはガードされて-3だが発生が遅い。
+弱/中ネクサスは発生が早く、ガードされて-5なので基本的にはマイトかグリードに派生する。
+通常技かしゃがみガードにはマイトが、インパクトか立ちガードにはグリードが勝てる。
+ノヴァはあまり意味がない。
+ヒットしたらマイトが基本だけど、端では立ち確認してグリードから追撃の方が高い。
+
+強/ODはガードされて-3だが発生が遅い。
+
+マイトで通常技を潰してカウンターになるとダウンになるのでそれも判別しないといけない。
+ガード方法をランダムにして練習する。
+
 2MP/2HP/4HP/HKからは中ネクサスまで無敵技以外で割り込めない。
 
 ## 弱/中ネクサス(g): -5
