--- a/games/Street-Fighter/Six/theory/攻めの基本.md
+++ b/games/Street-Fighter/Six/theory/攻めの基本.md
@@ -201,3 +201,5 @@ https://x.com/acqua_db/status/1902286060316717314
 攻める側は相手が何もしてこないなら不利フレームを背負っていてもとにかく攻めていい。攻めを切らす方がダメ。まぁ、キャラによっては無理に攻めるよりも差し合いに戻った方がいい場合もあるけど。
 
 ダメージが少なくてもガードさせるだけでドライブゲージの回復を妨げられる。
+
+近距離が弱いキャラはジャンプやラッシュでガードされたときに適正距離まで離す連携が必要。中途半端な距離は危ない。
