--- a/shared/computer/network/インターネット.md
+++ b/shared/computer/network/インターネット.md
@@ -3,3 +3,5 @@
 組織内におけるプライベートネットワークをイントラネットと呼ぶ。
 
 ネットに嘘が多いのではなく、ネットには個人の意見が多いだけ。ネットでなくとも個人の意見は嘘が多い。
+
+インターネットが地獄なのではなく、人間関係が地獄なのだ。インターネットは目に見える範囲に人間が多すぎるだけ。
