--- a/shared/lifestyle/pet/ペット.md
+++ b/shared/lifestyle/pet/ペット.md
@@ -11,3 +11,6 @@
 懐くのは個体識別が前提。相手がわかってないなら懐いているのではなくて人間全般に慣れただけかも。
 
 誰に対しても懐くのは、懐くというより人に慣れてるだけかも。相手を識別してない。
+
+猫に氷入りの水を与えると水分摂取量が増えるという研究結果があるみたい。
+https://x.com/FujiiACC/status/1953961924670190079
