--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -59,3 +59,8 @@
 
 差し返しは2HK一本でもいい。
 2MPもあるけど足払いに当たりづらいし。
+
+## メモ
+
+かずのこはステローとニーをめっちゃ使ってる。あと密着はMPMP2MP弱ショットとかできっちり離す。当たってたらMPLPアパカ。
+ノヴァからはステハイアパカ。ステハイからはSA1、2も入るし便利そう。でも普通にやるとステハイアパカ入らないけどどうやってるんだ？
