--- a/games/shogi/将棋の学び方.md
+++ b/games/shogi/将棋の学び方.md
@@ -24,3 +24,9 @@
 ## 備考
 
 将棋の格言を覚えるのもいい。
+
+まずは裸玉で詰む形をたくさん覚えるのが基本。慣れたらどんどん複雑な詰み形を覚える。
+
+- △5二玉、持ち駒飛2金1が詰み。▲5四飛から。左右にずれても同じ。
+- ▲6二馬、△5四玉、持ち駒飛2、金1が詰み。▲5六飛から。左右にずれても同じ。
+- ▲4四飛、△5一玉、持ち駒飛1、金1が詰み。▲5三飛から。左右にずれても同じ。
