--- a/shared/art/tips/絵画を鑑賞する.md
+++ b/shared/art/tips/絵画を鑑賞する.md
@@ -3,3 +3,9 @@
 - 近くから見る
 - 遠くから見る
 - 角度を変える
+
+まずはデザインというか見た目の面。形、色、質感。
+社会的、歴史的な位置付けもある。特に歴史の転換点にある作品や作者は重要。歴史の大きな流れのどこに位置するか。
+感覚的な部分で言うと印象や好みの問題もある。
+技術的な背景も知っているとなお良い。チューブ絵の具やエッチング、印刷技術、デジタル技術など。
+近代では商業的な位置付けもある。アンディウォーホルとか。
