--- a/shared/music/theory/harmony/和音.md
+++ b/shared/music/theory/harmony/和音.md
@@ -36,3 +36,5 @@ https://jp.yamaha.com/services/music_pal/study/chord/cadence/index.html
 コード進行は単純でもいい。最低限、和音二種から作れる。
 
 ちなみに、きよしこの夜のコード進行は、ハ長調のメジャーコードのみの C-C-G-C-F-C-F-C-G-C-CG-C である。
+
+そもそも人間の声や楽器の音は和音である。
