--- a/study/politics/権利.md
+++ b/study/politics/権利.md
@@ -11,3 +11,6 @@
 権利を求める人は疑ったほうがいい。
 
 「XXする権利があるのか？」と問われれば、「お前は生きる権利がないからって死ぬのか？」と答える。
+
+誰かを裁く権利などなくてもやるべきならやるしかない。
+そもそも誰もが本来は裁定者なのだ。権力によってそれを奪われているだけ。
