--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -172,3 +172,5 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 畳のふちを踏まないとか、扉の足を踏まないとかも、そういう気遣いを見せること自体が重要。それ自体に意味がなくてもいい。
 
 「気遣いできる人ほど悪いところにも気づくので人が嫌い」説もある。
+
+先回りして対処するだけが配慮ではない。時には任せるのも配慮。
