--- a/shared/cooking/ingredients/野菜.md
+++ b/shared/cooking/ingredients/野菜.md
@@ -5,3 +5,7 @@
 - https://www.asahi-kasei.co.jp/saran/preservation/vegetables/
 
 白菜は業スーの500g冷凍よりも1/4生の方がでかいので、鍋でしか使わないなら冷凍で買った方が便利。
+
+## とうもろこし
+
+オーブンでとうもろこしを焼くと回すのがだるいから縦に半分にしても良かった。
