--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -308,3 +308,5 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 「そもそもだ！面白いと思ってるもんがつまらん奴に何をやらせてもつまらんだろ！」（『その着せ替え人形は恋をする』）
 
 単に加工というよりは、工夫の部分にartがあると思う。
+
+アーティストにはエゴが必要。個性がないといけない。しかし、その前に基礎的な技術がないとエゴを表現できない。目的としてのエゴと手段としての技術を両立する。
