--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -1,3 +1,8 @@
+## コンボ選択
+
+シミーや差し返しは2MP(pc)が基本で、余裕があったら2HP(pc)が狙えると強い。
+まぁ、2HPは最悪ガードされても強ネクサスなら大した隙はない。
+
 ## 2LP
 
 - 2LP, LP, 強アッパー: 1520
@@ -27,6 +32,7 @@
 
 - 6LK(+4), 2MP, 強アッパー: 2080
 - 6LK(+4), 2MP, 強ニー: 1960
+- {端} 6LK(+4), 2MP, ODニー, 弱アッパー: 2520
 - 6LK(+4), 2MP-HK, SA1: 2820
 - 6LK(+4), 2MP-HK, SA2: 3220 (2:3070)
 - 6LK(+4), 2MP, 強アッパー: 4080
@@ -91,6 +97,7 @@
 
 - 6MP(+4), 2MP, 強アッパー: 2580
 - 6MP(+4), 2MP, 強ニー: 2420 41F
+- {端立} 6MP(+4), 2MP, 中グリード, 弱アッパー: 2950
 - {端} 6MP(+4), 2MP, ODニー, 弱アッパー: 3240
 - {端} 6MP(+4), 2MP, ODニー, ODアッパー: 3540
 - 6MP(+4), 2MP-HK, SA1: 3640
@@ -186,9 +193,18 @@ HKの2段目からは強ノヴァが繋がらない。
 
 - {空} J.MP, 弱アッパー: 1800
 
+## J.HP
+
+- J.HP, 4HP, 強ニー, 弱アッパー: 3410
+- J.HP, 4HP, 中ショット, DR(中央では1-2F長め) 4HP, 強アッパー-h: 4060
+- J.HP, 4HP, 強ニー, 弱アッパー, SA3: 5410
+- J.HP, 4HP, 中ショット, DR(中央では1-2F長め) 4HP, 強アッパー-h: 5550
+
 ## DI(pc)
 
 - DI(pc), ステップ, 4HP, 強アッパー-h: 3560
+- DI(pc), ステップ, DR 4HP, 強ノヴァ, DR 4HP, 強ノヴァ, 強ニー, 弱アッパー: 2747 32F (端から端まで運ぶ)
+- DI(pc), ステップ, DR 4HP, 強ノヴァ, DR 4HP, 強ノヴァ, 6HK, 強アッパー: 2747 27F (端から端まで運ぶ)
 - DI(pc), ステップ, 4HP, 強ニー, SA2: 4310 4F
 - DI(pc), ステップ, 4HP, 強ニー, SA2-2: 4130 19F
 - DI(pc), ステップ, 4HP, 強ニー, SA2-6, DR 4HP, 強ニー, 中アッパー: 3882 (端から端まで運ぶ)
