--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -7,22 +7,19 @@
 
 ## MP: 3-8
 
+ガードされても+2で状況がいい。
+
 ## DR 2MK: 17-21
+
+下段。ヒットすると4HPが入る。
 
 ## 6MP(+1): 22-23
 
 ヒットで2LP, LPが繋がる。
 
-## J.HP
+## DR 6LK: 26-30
 
-- J.HP(g), 4HP, 中ショット: +3
-  - {中央} LP, 弱ショット, ガード
-  - {端} 前投げ
-  - {端} 後退: シミー
-  - {端} MP, LP, ...
-  - {端} MP(c), 4HP, ...
-  - {端} MP(g), 2LP, 2MP, 弱ショット: 離れて-5、2MPの前に長い5F技で割り込める
-  - {端} MP(g), 後退(8F), 2LP, ODニー: 相手が小技を空振りしたら2LPが当たる
+下段。遠めの起き攻めでよく使う。
 
 ## 弱ニー(+8): 21-23
 
@@ -35,3 +32,16 @@
 ## 強ニー(+5): 34-39
 
 ガードされても五分以上。端ではヒットすると追撃できる。
+
+## J.HP: 33-42
+
+- J.HP(g), 4HP, 中ショット: +3
+  - {中央} LP, 弱ショット, ガード
+  - {端} 前投げ
+  - {端} 後退: シミー
+  - {端} MP, LP, ...
+  - {端} MP(c), 4HP, ...
+  - {端} MP(g)
+    - 2LP, 2MP, 弱ショット: 離れて-5、2MPの前に長い5F技で割り込める
+    - 2LP, 2MP, 弱ニー:
+  - {端} MP(g), 後退(8F), 2LP, ODニー: 相手が小技を空振りしたら2LPが当たる
