--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -9,6 +9,8 @@
 
 - J.HP/DR MP(h), 4HP, 強ニー, 弱アッパー, SA3
 - J.HP/DR MP(g), 4HP, 中ショット
+  - {中央} 2LP, 2MP, 弱ショット, ガード
+  - {端} MP, 2LP, 2MP, 弱ショット, ガード
 
 ### 飛び道具と対空
 
@@ -40,8 +42,9 @@
 
 （確定反撃の練習）
 
-- 6HK(pc), HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3
-- {端} 6HK(pc), HK, 強ノヴァ, 4HP, 強アッパー-h, SA3
+- 2HK, ステップ, 後退
+  - 6HK(pc), HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3
+  - {端} 6HK(pc), HK, 強ノヴァ, 4HP, 強アッパー-h, SA3
 
 ### インパクト返しのコンボ
 
@@ -57,6 +60,17 @@
 
 - DR 2MK, MP(h), LP, 中アッパー, SA3
 - DR 2MK, MP(g), LP, 弱ショット, ガード
+
+## 中級
+
+### ラッシュ中下段
+
+（ガード: 2段目以降ガード）
+（ガードの切り替え: ランダム）
+
+- 強ニー
+  - DR 6LK/6MP, 2MP, 強ニー, ...
+  -
 
 ## その他
 
@@ -91,7 +105,19 @@
 
 - 6HK(pc), 6HK, 2MP-HK, SA1
 
-### MP始動のコンボ
+### MPからの攻め
 
-- MP, MP(h), LP, 中昇竜, ステップ
-- MP, MP(g), 2MP, 弱ショット, ガード
+（ガードリバーサル: 4F技/何もしない）
+
+- MP(h), 2LP, 中アッパー
+- MP(g), 2LP
+  - 2MP, 中ネクサス(c)
+    - マイト, 中アッパー
+  - 2MP, 中ネクサス(h)
+    - マイト, MP, ...
+  - 2MP, 中ネクサス(g)
+    - マイト(c)
+      - ステップ, MP, ...
+    - マイト(h)
+      - MP, ...
+    - マイト(g), ガード
