--- a/games/Street-Fighter/Six/theory/攻めの基本.md
+++ b/games/Street-Fighter/Six/theory/攻めの基本.md
@@ -203,3 +203,5 @@ https://x.com/acqua_db/status/1902286060316717314
 ダメージが少なくてもガードさせるだけでドライブゲージの回復を妨げられる。
 
 近距離が弱いキャラはジャンプやラッシュでガードされたときに適正距離まで離す連携が必要。中途半端な距離は危ない。
+
+重要なのはコンボよりも攻め継続。ヒットした時だけでなく、ガードされた時の対応も覚えないといけない。さらにカウンターの場合もあるとなお良い。
