--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -3,6 +3,10 @@
 シミーや差し返しは2MP(pc)が基本で、余裕があったら2HP(pc)が狙えると強い。
 まぁ、2HPは最悪ガードされても強ネクサスなら大した隙はない。
 
+DリバはMP(pc)から。
+
+16F以上の隙には6HK(pc)から。
+
 ## 2LP
 
 - 2LP, LP, 強アッパー: 1520
@@ -16,27 +20,6 @@
 - {端} 2LP(pc), ODニー, 弱アッパー: 2300
 - {端} 2LP(pc), ODニー, ODアッパー: 2600
 - {端} 2LP(pc), ODニー, 弱アッパー, SA3: 4300
-
-## 2LK
-
-2LP, LPと同じ。
-ダメージは100落ちる。
-
-## 6LK(c)
-
-- 6LK(c), LP, 弱マイト: 1750
-- 6LK(c), LP, 中アッパー: 1890
-- 6LK(c), LP, ODアッパー: 2010
-
-## 6LK(+4)
-
-- 6LK(+4), 2MP, 強アッパー: 2080
-- 6LK(+4), 2MP, 強ニー: 1960
-- {端} 6LK(+4), 2MP, ODニー, 弱アッパー: 2520
-- 6LK(+4), 2MP-HK, SA1: 2820
-- 6LK(+4), 2MP-HK, SA2: 3220 (2:3070)
-- 6LK(+4), 2MP, 強アッパー: 4080
-- 6LK(+4), 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 4341
 
 ## MP
 
@@ -104,19 +87,6 @@
 - 6MP(+4), 2MP-HK, SA2: 4200
 - {端} 6MP(+4), 2MP, ODニー, 弱アッパー, SA3: 5240
 
-## MK
-
-- MK-HK: 1500
-
-## 2MK(+4)
-
-- 2MK(+4), 2MP, 強アッパー: 2200
-- 2MK(+4), 2MP, 中マイト: 1910
-- 2MK(+4), 4HP, 強ニー, 弱アッパー: 2810
-- {端} 2MK(+4), 4HP, 中ショット, DR 4HP, 強アッパー-h: 3314 (2MKが近すぎるとショットが当たらない)
-- 2MK(+4), 2MP-HK, SA1: 3100
-- 2MK(+4), 2MP-HK, SA2: 3580
-
 ## HP
 
 - HP-HK: 2000
@@ -139,6 +109,40 @@
 ## {空} 4HP
 
 - {空} 4HP, 強アッパー-h: 3120 (4HP 2ヒットで3320)
+
+## 2LK
+
+2LP, LPと同じ。
+ダメージは100落ちる。
+
+## 6LK(c)
+
+- 6LK(c), LP, 弱マイト: 1750
+- 6LK(c), LP, 中アッパー: 1890
+- 6LK(c), LP, ODアッパー: 2010
+
+## 6LK(+4)
+
+- 6LK(+4), 2MP, 強アッパー: 2080
+- 6LK(+4), 2MP, 強ニー: 1960
+- {端} 6LK(+4), 2MP, ODニー, 弱アッパー: 2520
+- 6LK(+4), 2MP-HK, SA1: 2820
+- 6LK(+4), 2MP-HK, SA2: 3220 (2:3070)
+- 6LK(+4), 2MP, 強アッパー: 4080
+- 6LK(+4), 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 4341
+
+## MK
+
+- MK-HK: 1500
+
+## 2MK(+4)
+
+- 2MK(+4), 2MP, 強アッパー: 2200
+- 2MK(+4), 2MP, 中マイト: 1910
+- 2MK(+4), 4HP, 強ニー, 弱アッパー: 2810
+- {端} 2MK(+4), 4HP, 中ショット, DR 4HP, 強アッパー-h: 3314 (2MKが近すぎるとショットが当たらない)
+- 2MK(+4), 2MP-HK, SA1: 3100
+- 2MK(+4), 2MP-HK, SA2: 3580
 
 ## HK(1)
 
