--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -31,10 +31,11 @@ MP(g)とほぼ同じ。ヒット時もほぼ同じ。
 
 - DR 6LK: 下段、目押し
 - DR 6MP: 中段、目押し、後ろ受け身には最速で7F遅れ
-- {中央} 中ショット: 両受け身からジャンプが間に合わない
+- {端} DR 前投げ
 - {端} 強ニー(+10): ガードされて+5、投げ間合いの外
+- {中央} 中ショット: 両受け身からジャンプが間に合わない
 
-ラッシュしても強くはないので、中央ではとりあえず中ショットが無難。
+中央でラッシュしてもパリィに弱いので、とりあえず中ショットでもいい。
 
 ## 4HP, 強ニー, 弱アッパー: 34
 
