--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -5,13 +5,6 @@
 
 ## 初級
 
-### ジャンプ・ラッシュ攻撃
-
-- J.HP/DR MP(h), 4HP, 強ニー, 弱アッパー, SA3
-- J.HP/DR MP(g), 4HP, 中ショット
-  - {中央} 2LP, 2MP, 弱ショット, ガード
-  - {端} MP, 2LP, 2MP, 弱ショット, ガード
-
 ### 飛び道具と対空
 
 （ダミー設定 > ガード: すべてガード）
@@ -20,31 +13,31 @@
 （反撃設定 > ガードリバーサル: 前方ジャンプ/垂直ジャンプ/何もしない）
 
 - 前進, 強ショット, ガード
-- 前進, 中ショット, 強ショット, ガード
+- 前進, 中ショット, 強ショット, ガード: ジャンプできない距離を覚える
 - {前方ジャンプ}, 中アッパー, 中ショット
 
 前進からショットでアッパーが漏れないようにする。
 
 中強ショットがコンボになる距離を覚える。
 
-ジャンプは対空する。
+### ジャンプ攻撃のコンボ
 
-### リターンの高い対空
+- J.HP(h), 4HP, 強ニー, 弱アッパー, SA3
+- J.HP(g), 4HP, 中ショット: 連続ガードにする
+  - {中央} 2LP, 2MP, 弱ショット, ガード
+  - {端} MP, 2LP, 2MP, 弱ショット, ガード
 
-（対空練習）
+### ラッシュ攻撃のコンボ
 
-- 4HP(c), 強アッパー-h
-  - 中ショット, 強ショット, ガード
-
-自分が技を出してない時に狙う、リターンの高い対空。
+- DR MP(h), 4HP, 強ニー, 弱アッパー, SA3
+- DR MP(g), MP, 2MP, 弱ショット, ガード
 
 ### 昇竜やSAの確反
 
 （確定反撃の練習）
 
-- 2HK, ステップ, 後退
-  - 6HK(pc), HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3
-  - {端} 6HK(pc), HK, 強ノヴァ, 4HP, 強アッパー-h, SA3
+- 6HK(pc), 4HP, 強アッパー-h, SA3
+- {端} 6HK(pc), HK, 強ノヴァ, 4HP, 強アッパー-h, SA3
 
 ### インパクト返しのコンボ
 
@@ -56,34 +49,32 @@
 
 - DI(壁), 4HP, 強アッパー-h, SA3
 
-### ラッシュ下段 1
-
-- DR 2MK, MP(h), LP, 中アッパー, SA3
-- DR 2MK, MP(g), LP, 弱ショット, ガード
-
 ## 中級
 
-### ラッシュ中下段
+### リターンの高い対空
 
-（ガード: 2段目以降ガード）
-（ガードの切り替え: ランダム）
+（対空練習）
 
-- 強ニー
-  - DR 6LK/6MP, 2MP, 強ニー, ...
-  -
+- 4HP(c), 強アッパー-h
+  - 中ショット, 強ショット, ガード
+
+自分が技を出してない時に狙う、リターンの高い対空。
+
+### 6LKのヒット確認
+
+- 6LK(c), LP, 中アッパー
+  - DR 6LK(h), 2MP, 強ニー, DR 6LK, ...
+  - DR 6LK(g), 2LP, 2MP, 弱ショット, ガード
+- 6LK(h), LP, 弱ショット, ガード
+- 6LK(g), ガード
+
+### HPのヒット確認と中下段
+
+- HP(h)-HK
+  - DR 6LK/6MP, 2MP, 強ニー, DR 6LK/6MP, ...
+- HP(g), ガード
 
 ## その他
-
-### ラッシュ中段
-
-- DR 6MP, 2MP, 強ニー
-
-### ラッシュ下段 2
-
-- DR 2MK(h), 4HP, 強ニー, 弱アッパー, SA3
-- DR 2MK(g)
-  - MP(h), LP, 中アッパー, SA3
-  - MP(g), LP, 弱ショット, ガード
 
 ### MKのヒット確認
 
@@ -104,6 +95,7 @@
 ### 昇竜やSAの確反 2
 
 - 6HK(pc), 6HK, 2MP-HK, SA1
+- 6HK(pc), 6HK, 2MP-HK, SA2
 
 ### MPからの攻め
 
@@ -121,3 +113,8 @@
     - マイト(h)
       - MP, ...
     - マイト(g), ガード
+
+### ラッシュ下段 1
+
+- DR 2MK, MP(h), LP, 中アッパー, SA3
+- DR 2MK, MP(g), LP, 弱ショット, ガード
