--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -27,6 +27,8 @@
   - {中央} 2LP, 2MP, 弱ショット, ガード
   - {端} MP, 2LP, 2MP, 弱ショット, ガード
 
+<!-- ガードからは中ネクサスの方がいい？強いけど複雑。 -->
+
 ### ラッシュ攻撃のコンボ
 
 - DR MP(h), 4HP, 強ニー, 弱アッパー, SA3
@@ -51,6 +53,11 @@
 
 ## 中級
 
+### 弱攻撃のコンボ
+
+- 2LK(h), LP, 中アッパー, SA3
+- 2LK(g), LP, 弱ショット, ガード
+
 ### リターンの高い対空
 
 （対空練習）
@@ -74,28 +81,7 @@
   - DR 6LK/6MP, 2MP, 強ニー, DR 6LK/6MP, ...
 - HP(g), ガード
 
-## その他
-
-### MKのヒット確認
-
-- MK(h)-HK
-  - 強ニー(+9)(h)
-    - {端} 弱アッパー
-  - 強ニー(+9)(g)
-    - 前投げ
-      - {中} 強ショット
-      - {端}
-- MK(g), ガード
-
-### Dリバの確反
-
-- MP(pc), HK(1), 強ノヴァ, 強アッパー, ステップ, MP, ...
-- {端} MP(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h
-
-### 昇竜やSAの確反 2
-
-- 6HK(pc), 6HK, 2MP-HK, SA1
-- 6HK(pc), 6HK, 2MP-HK, SA2
+## 上級
 
 ### MPからの攻め
 
@@ -113,6 +99,29 @@
     - マイト(h)
       - MP, ...
     - マイト(g), ガード
+
+### Dリバの確反
+
+- MP(pc), HK(1), 強ノヴァ, 強アッパー, ステップ, MP, ...
+- {端} MP(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h
+
+## その他
+
+### MKのヒット確認
+
+- MK(h)-HK
+  - 強ニー(+9)(h)
+    - {端} 弱アッパー
+  - 強ニー(+9)(g)
+    - 前投げ
+      - {中} 強ショット
+      - {端}
+- MK(g), ガード
+
+### 昇竜やSAの確反 2
+
+- 6HK(pc), 6HK, 2MP-HK, SA1
+- 6HK(pc), 6HK, 2MP-HK, SA2
 
 ### ラッシュ下段 1
 
