--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -169,6 +169,7 @@ HKの2段目からは強ノヴァが繋がらない。
 - 6HK(pc), 4HP, 強ニー, 弱アッパー: 3610
 - {端} 6HK(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h: 4000
 - 6HK(pc), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h: 3868
+- {端} 6HK(pc), 4HP, 中ショット, DR 4HP, 強アッパー-h: 4260
 - 6HK(pc), 4HP, 強ニー, ODアッパー: 3960
 - {端} 6HK(pc), HK, ODノヴァ, 4HP, 強アッパー-h: 4270
 - 6HK(pc), HK, 強ノヴァ, 弱ニー: 2980 42F
@@ -176,7 +177,7 @@ HKの2段目からは強ノヴァが繋がらない。
 - 6HK(pc), 6HK, 2MP-HK, SA2: 4637 (2:4475)
 - 6HK(pc), HK, 強ノヴァ, 6HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 3990 (端から端まで運ぶ)
 - 6HK(pc), HK, 強ノヴァ, DR 2MP-HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 4132 (端から端まで運ぶ)
-- 6HK(pc), 6HK, 2MP-HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 4237
+- 6HK(pc), HK, CR HK, 強ノヴァ, 6HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 4471
 - 6HK(pc), 4HP, 強ニー, 弱アッパー, SA3: 5610
 - 6HK(pc), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5528
 - 6HK(pc), HK, DR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5927
