--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -38,8 +38,8 @@
 
 （確定反撃の練習）
 
-- 6HK(pc), 4HP, 強アッパー-h, SA3
-- {端} 6HK(pc), HK, 強ノヴァ, 4HP, 強アッパー-h, SA3
+- 6HK(pc), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3
+- {端} 6HK(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h, SA3
 
 ### インパクト返しのコンボ
 
