--- a/shared/game/genres/fighting/格闘ゲームと反射神経.md
+++ b/shared/game/genres/fighting/格闘ゲームと反射神経.md
@@ -23,3 +23,9 @@
 
 判断の時間も含めるともう少しかかる。だいたい25Fくらいと考えておくといい。
 あらかじめ判断を済ませて一点読みすると最速で反応できる。
+
+モニターやハードの関係で描画にラグがある場合は、ある程度反応できるようになったら改善していくといい。
+まずは練習が先。
+
+まずは自分の反射神経を調べる。
+それをフレームに直して、確認猶予のフレームがそこに追いつくまではまず練習。次に環境。
