--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -328,3 +328,8 @@ Trainingは特に技術や操作を鍛える面が強い。
 Practiceは反復練習や実践のこと。
 
 負荷に慣れるなら実践レベルの負荷に慣れないと意味がない。
+
+「成果がさ、よくわかんないのよ。暗闇の中を歩いているような気持ちにさせられるわけ。でも、どこかで抜け道があるっていうのを体験することができたんだよね。」（梅原大吾）
+https://m.twitch.tv/videos/1991942489?desktop-redirect=true
+
+本当にできるかわからないことは、自分を信じて練習するしかない。
