--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -7,6 +7,9 @@ DリバはMP(pc)から。
 
 16F以上の隙には6HK(pc)から。
 
+強/ODノヴァは3つのSAのどれでも使えるので便利。
+あとは最悪2MP-HKに繋いだら同じくなんでも繋がる。地上でも空中でも拾える。ただ、結局浮かすとノヴァに繋いで拾うしかない。
+
 ## 2LP
 
 - 2LP, LP, 強アッパー: 1520
