--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -3,6 +3,10 @@
 相手をBOさせるのが強い。
 無理に近づいて崩すよりもゲージを削る。
 
+サガットは距離ごとに連携判断するのがむずい。
+密着で攻撃をガードされたらそのまま連携で離さないと後ろ歩きが遅いけど、弱ショットが-7なので確反をもらうことがある。
+中間択としてはとりあえずネクサスに繋いでじゃんけんに持ち込む手もある。
+
 ## 差し合い
 
 まずは通常技と中ニーが基本。
