--- a/shared/government/legal/刑罰.md
+++ b/shared/government/legal/刑罰.md
@@ -4,3 +4,5 @@
 シンガポールやマレーシア、サウジアラビア、などでは鞭打ちなどの肉刑が残っている。
 
 拷問と肉刑は混同されがちだけど、拷問はあくまでも尋問。ただ、肉体的に痛めつける行為を指して他にちょうどいい言葉がないので拷問が使いやすい。
+
+ちゃんと警察が取り締まらないと私刑が増える。
