--- a/shared/human/being/人生.md
+++ b/shared/human/being/人生.md
@@ -38,3 +38,6 @@ https://x.com/cicada3301_kig/status/1914565545967428076?s=46
 楽に流されれば芯を失う。
 
 苦、楽、道。
+
+死に方は選べない。事故や病気でいきなり死ぬかもしれない。せめて生き方だけは選ぶ。
+死に方というのは、結果のこと。
