--- a/study/economics/経済政策.md
+++ b/study/economics/経済政策.md
@@ -37,3 +37,5 @@ https://www.mof.go.jp/policy/international_policy/councils/bop/20240702.pdf
 ある程度介入しつつ、基本的には市場に任せるのが主流。
 
 格差が広がるような政策をしている国は見込みがない。
+
+デフレだと供給が弱くなって、インフレだと需要が弱くなる。ただ、食品とかなくならない需要がある分、微インフレを目指すべき。
