--- a/study/economics/資本主義.md
+++ b/study/economics/資本主義.md
@@ -39,3 +39,5 @@
 資本主義社会では、金を手に入れるために、価値がない人は迫害される。人としての価値とは信用である。ただ、金を持っている人はそれだけで価値がある。
 
 自分が生かしたい人だけを生かす社会はどうなるか。
+
+資本主義経済における経営者の資産はそもそも労働者から搾取したものなので、倫理的には経営者からどれだけ税金を取っても良い。
