--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -26,7 +26,7 @@ DリバはMP(pc)から。
 
 ## MP
 
-- MP, MP, LP, 中アッパー: 2420
+- MP, MP, LP, 中アッパー: 2420 28F
 - MP, LP, 弱マイト: 1860
 - {端立} MP, LP, 弱グリード, 弱アッパー: 2550
 - MP, MP, LP, CR 2LP, 2MP, 強アッパー: 2595
@@ -48,12 +48,17 @@ DリバはMP(pc)から。
 
 - 2MP, 強ニー: 2000
 - 2MP, 中マイト: 1740
-- {端立} 2MP, OD上ショット, 6HK, 中アッパー: 3000
 - {端} 2MP, ODニー, 弱アッパー: 2970
+- {端立} 2MP, OD上ショット, 6HK, 中アッパー: 3000
 - {端} 2MP, CR HK, 強ノヴァ, 4HP, 強アッパー-h: 3381
+- {端} 2MP, ODニー, ODアッパー: 3320
 - 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h: 3465
 - 2MP, CR HK, 強ノヴァ, 6HK, SA1: 3215
-- 2MP, CR HK, 強ノヴァ, 6HK, SA2:
+- 2MP, OD上ショット, SA1: 3140
+- 2MP-HK, SA1: 3360
+- 2MP-HK, SA2: 4000
+- 2MP-HK, SA3: 4800
+- 2MP, CR HK, 強ノヴァ, 6HK, SA2: 3755
 - 2MP, CR HK, 強ノヴァ, 強アッパー, SA3: 4849
 - 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5125
 
@@ -63,9 +68,12 @@ DリバはMP(pc)から。
 - {立端} 2MP(pc)-HP, 中グリード, 弱アッパー: 2970
 - 2MP(pc)-HP, ODノヴァ, 強アッパー: 3080
 - {立端} 2MP(pc)-HP, 中グリード, ODアッパー: 3220
-- {端} 2MP(pc)-HP, ODニー, ODアッパー: 3560
 - {端} 2MP(pc), ODノヴァ, 4HP, 強アッパー-h: 3620
-- {端} 2MP(pc), ODノヴァ, 4HP, 強アッパー-h, SA3:
+- 2MP(pc), ODノヴァ, DR 4HP, 強アッパー-h: 3444
+- {端} 2MP(pc)-HP, ODニー, ODアッパー: 3560
+- 2MP(pc)-HP, ODノヴァ, 6HK, SA1: 3500
+- {端} 2MP(pc), ODノヴァ, 4HP, 強アッパー-h, SA3: 5120
+- 2MP(pc), ODノヴァ, DR 4HP, 強アッパー-h, SA3: 5024
 
 ## 2MP-HK
 
@@ -226,14 +234,19 @@ HKの2段目からは強ノヴァが繋がらない。
 
 4HPが届かなかったらDR 4HPにする。
 
-## {遠} 中ショット
+## {遠} 中ショット/{空} 強ショット
 
 - {端} 中ショット, 強ショット: 1400
 - 中ショット, SA1: 2900
 
-## {遠} ODショット
+## OD上ショット
 
-- ODショット, SA1: 2560
+- OD上ショット, SA1: 2560
+- {端} OD上ショット, 6HK, 中アッパー: 2630
+- {端} OD上ショット, 6HK, ODアッパー: 2760
+- {端} OD上ショット, 6HK, SA1: 3150
+- {端} OD上ショット, 6HK, SA2: 3667 (2:3475)
+- {端} OD上ショット, 6HK, 中アッパー, SA3: 4630
 
 ## {端} 弱ニー(+10)
 
@@ -272,6 +285,24 @@ HKの2段目からは強ノヴァが繋がらない。
 - 強/ODノヴァ, 強アッパー, SA3: 4420
 
 強/ODネクサスは強派生が繋がる。
+
+## 相手がBOした場合の削り
+
+- 2LP(g), 強アッパー: 400
+- 2LP(g), 弱ショット: 150
+- 2MP(g), 中マイト: 325
+- {立} 2HP(g), ODグリード: 375
+- "2MP(g), OD上ショット" 2回: 500
+- {立} 2MP(g), OD上ショット, 2MP, 弱ニー: 450 1F (しゃがみは割り込めないが繋がらなくて+6)
+- 2MP(g), OD上ショット, 2MP, 強アッパー: 650
+- {端} "2MP(g), OD上ショット" 4回: 1000
+- {端} "2MP(g), OD上ショット" 3回, 2MP, 強アッパー: 1150
+- 2MP(g), OD上ショット, 2MP, SA1: 750
+- {端} "2MP(g), OD上ショット" 3回, 2MP, SA2: 1250
+- 2MP(g), OD上ショット, 2MP, SA2: 1000
+- {端} "2MP(g), OD上ショット" 3回, 2MP, SA2: 1500
+- 2MP(g), OD上ショット, 2MP, SA3: 1250
+- {端} "2MP(g), OD上ショット" 3回, 2MP, SA3: 1750
 
 ## メモ
 
