--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
@@ -3,3 +3,12 @@
 
 足が遅くてシミーしづらい。
 シミーは基本的にバクステから。
+
+## BOさせた場合の攻め
+
+- 連続ガードになる削りはコンボ参照。
+- 強/ODネクサス(g)-ノヴァに無敵技以外で割り込めない。
+- 2LP(g), 2MPが4F技と相打ちで2MPが入る
+- DR MP(g)、グリード(g)、ノヴァ(g)
+
+BO中は特にOD上ショットを削りで使っていくのが大事。
