--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -9,12 +9,17 @@
 
 ## 差し合い
 
+牽制の2MPが強い。全体26Fで隙が小さい。
+まずは強力な牽制で手を出しづらくして、差し返し狙いに2HP、HP、6LKあたりの強い技を当てに行く。
+
 まずは通常技と中ニーが基本。
 ニーはしゃがんでいると持続当てになってガードされても有利になる。
 相手がニーを嫌って立つようなら6LKやHK、中/強ショットが当たりやすくなる。
 
 強ショットは発生12Fで弾速もあるので見てから飛ぶのは難しい。
 立っていないと当たらないので、ニーで揺さぶって読み合いにする。
+
+通常技は距離によって2LP、2MP、2HP、(MK)、HPを使い分けるのがまず基本。
 
 相手が立っていると強い中/強ショット、ステローと、相手がしゃがんでいると強い中ニーで中・遠距離を制圧する。
 
@@ -29,7 +34,6 @@
 - 2MP
   - 弱ショット: 無敵技以外で割り込めない、先端ならガードされても-6くらいで大足の外
   - 中ネクサス: ガードさせて読み合い
-- 弱ニー
 - {端} ODニー: ガードされて-2の投げ間合い
 - 2HP
   - 弱ショット: 先端ならガードされても連続ガードの-5くらいで大足の外、インパクトを返しやすい
@@ -47,6 +51,8 @@
 
 2MPよりLKの方が長いけど、2MPの方が判定が強いし火力も高いので踏み込んで当てる価値はある。
 
+弱ニーは使いたくなるけど、不利になりやすいので中ニーの距離まで我慢。弱ニーを狙うならどちらかというとHPと6LK、あとはDR MPやDR 2LPが強い。
+
 ## 牽制の選択肢
 
 - MP: 全体24F、中/強ショットとモーションが似ていてフェイントになる
@@ -58,11 +64,14 @@
 
 ## 差し返しの選択肢
 
+- 2MP(pc),
 - 2HK
 - LK(pc), 強アッパー
 
-差し返しは2HK一本でもいい。
-2MPもあるけど足払いに当たりづらいし。
+地上戦の差し返しは2HK一本でもいい。
+2MPもあるけど足払いに当たりづらいし。LKも結構長い。
+
+シミーは2MPが無難。ODネクかTC。ラッシュも楽ではある。余裕があれば2HP強ネク。
 
 ## メモ
 
