--- a/study/philosophy/examples/ギリシア哲学/ギリシア哲学の枢要徳.md
+++ b/study/philosophy/examples/ギリシア哲学/ギリシア哲学の枢要徳.md
@@ -1,4 +1,27 @@
-# 正義と勇気
+# 枢要徳
+
+プラトンがまとめた古代ギリシア時代の代表的な 4 つの徳。
+
+知恵、勇気、節制、正義、からなる。
+それぞれは独立したものではなく、補うあって初めて完成する。
+
+https://ja.wikipedia.org/wiki/%E6%9E%A2%E8%A6%81%E5%BE%B3
+
+## 正義
+
+正しいだけで正義とは言えない。
+相手のためになること、義を示す必要がある。
+
+「正義だからいい」も「暴力だからだめ」も中身はただの進次郎構文。重要なのは思考を止めないことだ。
+
+「暴力だからダメ」
+
+正義というのは、社会的な承認。信頼や信用。
+いくら「正義だ」と言っても周囲が認めなければ正義とは言えない。
+
+ルールを守るのは周りの力を借りるため。
+
+正義は単に利用するものであって、大層なものではない。
 
 ## 勇気なき正義
 
@@ -17,7 +40,12 @@
 失敗を恐れないのではなく、失敗を恐れながらも踏み出すのが勇気だ。
 リスクがないと思って何も考えずに踏み外すのは勇気ではない。
 
-## その他
+## 知恵と節制
+
+開発してできることが増えた分だけ、欲望も無限に広げてしまうのは良くない。
+余計な仕事を増やす必要はない。節制の心を忘れずに。
+
+## メモ
 
 正しさは management と強い関連がある。
 
