--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -121,6 +121,11 @@ DリバはMP(pc)から。
 
 - {空} 4HP, 強アッパー-h: 3120 (4HP 2ヒットで3320)
 
+## LK(pc)
+
+- LK(pc), 強アッパー: 1760
+- LK(pc), 強アッパー, SA3: 4160
+
 ## 2LK
 
 2LP, LPと同じ。
@@ -190,9 +195,13 @@ HKの2段目からは強ノヴァが繋がらない。
 - 6HK(pc), HK, 強ノヴァ, DR 2MP-HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 4132 (端から端まで運ぶ)
 - 6HK(pc), HK, CR HK, 強ノヴァ, 6HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 4471
 - 6HK(pc), 4HP, 強ニー, 弱アッパー, SA3: 5610
+- 6HK(pc), HK(1), 強ノヴァ, 強アッパー: 5380
+- {端} 6HK(pc), HK(1), 強ノヴァ, 4HP, 強ニー, 中アッパー, SA3: 5660
 - 6HK(pc), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5528
-- 6HK(pc), HK, DR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5927
-- 6HK(pc), HK, DR 6HK, HK, DR 6HK, HK(1), 強ノヴァ, 4HP, 強ニー, 中アッパー, SA3: 6108
+- 6HK(pc), HK, CR HK, 強ノヴァ, 強アッパー, SA3: 5749
+- {端} 6HK(pc), HK, CR HK, 強ノヴァ, 4HP, 強アッパー-h, SA3: 5859
+- 6HK(pc), HK, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5927
+- 6HK(pc), HK, CR 6HK, HK, DR 6HK, HK(1), 強ノヴァ, 4HP, 強ニー, 中アッパー, SA3: 6108
 
 遠いと4HPが届かない。
 
@@ -286,14 +295,21 @@ HKの2段目からは強ノヴァが繋がらない。
 
 強/ODネクサスは強派生が繋がる。
 
-## 相手がBOした場合の削り
+## {BO} 2LP(g)
 
 - 2LP(g), 強アッパー: 400
 - 2LP(g), 弱ショット: 150
+- 2LP(g), SA1: 500
+- 2LP(g), SA2: 750
+- 2LP(g), SA3: 1000
+
+## {BO} 2MP(g)
+
 - 2MP(g), 中マイト: 325
-- {立} 2HP(g), ODグリード: 375
-- "2MP(g), OD上ショット" 2回: 500
-- {立} 2MP(g), OD上ショット, 2MP, 弱ニー: 450 1F (しゃがみは割り込めないが繋がらなくて+6)
+- {立} 2MP(g), 中ショット, 2MP, 弱ショット: 325
+- {立} 2MP(g), 中ショット, 2MP, 強ニー: 525 -1F
+- 2MP(g), OD上ショット, 2MP, 強ニー: 600
+- {立} 2MP(g), OD上ショット, 2MP, 弱ニー: 450 1F (しゃがみは繋がらないが割り込めなくて+6)
 - 2MP(g), OD上ショット, 2MP, 強アッパー: 650
 - {端} "2MP(g), OD上ショット" 4回: 1000
 - {端} "2MP(g), OD上ショット" 3回, 2MP, 強アッパー: 1150
@@ -303,6 +319,14 @@ HKの2段目からは強ノヴァが繋がらない。
 - {端} "2MP(g), OD上ショット" 3回, 2MP, SA2: 1500
 - 2MP(g), OD上ショット, 2MP, SA3: 1250
 - {端} "2MP(g), OD上ショット" 3回, 2MP, SA3: 1750
+
+## {BO} 2HP(g)
+
+- {立} 2HP(g), ODグリード: 375 (ODネクサスまではしゃがみでもいい)
+
+## {BO} 弱ニー(g)
+
+- {屈} 弱ニー(下)(g), 2LP, 強アッパー: 550
 
 ## メモ
 
