--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
@@ -11,4 +11,22 @@
 - 2LP(g), 2MPが4F技と相打ちで2MPが入る
 - DR MP(g)、グリード(g)、ノヴァ(g)
 
+例:
+
+- 中ニー(g): 遠めで+4前後で削り250
+- 強ニー(g): -1で削り350
+- MP(g), 2LP, 2MP, 弱ニー, 2LP, 弱マイト
+- MP(g), 2LP, 2MP, 弱ニー, 2LP,
+- 2LP(g) 3回, 弱ニー: +1で削り200
+- {屈} 2MP, 強ニー: +8で削り350、立っていても-1
+- {立} 2MP, 中ショット, 2LP, 2MP, 弱ニー: +2で削り375、しゃがみには当たらない
+- 6LK, 2LP, 弱ショット
+
 BO中は特にOD上ショットを削りで使っていくのが大事。
+
+有利フレームを取ったらMP(g), 2LP, 2MP, 弱ニー, 2LP, 弱ネクサスまで繋ぐのが基本。
+あとは強ニーも-1で350削れて使いやすい。
+
+ノーキャンセルで2LP(g), 2LP, 2LK, 弱ニーみたいに繋いでもいい。
+
+単発の中ニーも強い。
