--- a/games/Street-Fighter/Six/characters/Sagat/サガットの特徴.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの特徴.md
@@ -37,6 +37,7 @@
 - 2LP
 - 2LK = LP
 - {屈} HK
+- バクステ
 - 2MP
 - LK
 - 2MK = 2HP
@@ -45,6 +46,7 @@
 - {立} HK
 - 2HK
 - HP
+- バクステ 2回
 - {立} 6HK
 - 弱ニー
 - 6LK
@@ -52,4 +54,6 @@
 - DI
 - 強アッパー
 - 中ニー
+- バクステ 3回
 - 強ニー
+- バクステ 4回
