--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -81,6 +81,12 @@
   - DR 6LK/6MP, 2MP, 強ニー, DR 6LK/6MP, ...
 - HP(g), ガード
 
+### BOされた状態の削り
+
+- 2LP(h) 2回, 弱ニー
+- 2LP(g) 3回, 弱ニー: 始動
+  - 2LP(g), MP, 2MP, 弱ニー, ...: 以下繰り返し
+
 ## 上級
 
 ### MPからの攻め
