--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -95,7 +95,10 @@ DリバはMP(pc)から。
 - {端} 6MP(+4), 2MP, ODニー, 弱アッパー: 3240
 - {端} 6MP(+4), 2MP, ODニー, ODアッパー: 3540
 - 6MP(+4), 2MP-HK, SA1: 3640
+- 6MP(+4), 2MP, CR HK, CR HK, 強ノヴァ, 6HK, SA1: 3919
 - 6MP(+4), 2MP-HK, SA2: 4200
+- 6MP(+4), 2MP, CR HK, 強ノヴァ, 6HK, SA2: 4121
+- 6MP(+4), 2MP, CR MP, HK, CR HK, 強ノヴァ, 6HK, SA1: 4533
 - {端} 6MP(+4), 2MP, ODニー, 弱アッパー, SA3: 5240
 
 ## HP
@@ -177,8 +180,13 @@ HKの2段目からは強ノヴァが繋がらない。
 
 ## 6HK
 
+- 6HK, 2MP, 強アッパー: 2720
+- 6HK, 2MP, 強ニー: 2560
 - 6HK, 2MP-HK, SA1: 3780
 - 6HK, 2MP-HK, SA2: 4340 (2:4130)
+- 6HK, 2MP, 強アッパー, SA3: 5120
+- 6HK, 2MP, CR HK, 強ノヴァ, 強アッパー, SA3: 5299
+- 6HK, 2MP, CR MP, HK, CR HK, 強ノヴァ, 強アッパー, SA3: 5592
 
 ## 6HK(pc)
 
