--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -18,6 +18,12 @@
 
 - MP(g): 連続ガードで密着、2LP, 2MPまでは届く、コンボは単発確認で
 
+## DR 6MP(g): 2
+
+- MP(c), 2MP, ...: 相打ちも同じ。
+- MP(h),
+- MP(g), LP, 弱ショット: -6で大足の外。
+
 ## 2MP-HK: 32
 
 - DR 6MP
