--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -21,6 +21,11 @@
 
 ヒットで2LP, LPが繋がる。
 
+## DR 6MP: 30-34
+
+中央ではDR 6MP, MP, LP, 中アッパーだと遠くて起き攻めしづらいので、ヒットしたらDR 6MP, 2MPルートがベスト。
+端ではMPルートの方が火力が出る。
+
 ## DR 6LK: 26-30
 
 下段。遠めの起き攻めでよく使う。
