--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -5,6 +5,13 @@
 
 ## 初級
 
+### 対空
+
+- 弱アッパー
+  - DR 6LK/6MP(h), 2MP
+  - DR 6LK/6MP(g), 2LP
+  - DR 6LK, ...
+
 ### 飛び道具と対空
 
 （ダミー設定 > ガード: すべてガード）
