--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -26,7 +26,8 @@ DリバはMP(pc)から。
 
 ## MP
 
-- MP, MP, LP, 中アッパー: 2420 28F
+- MP, MP, LP, 中アッパー(+2): 2420 29F
+- MP, LP, 中アッパー: 2020 27F
 - MP, LP, 弱マイト: 1860
 - {端立} MP, LP, 弱グリード, 弱アッパー: 2550
 - MP, MP, LP, CR 2LP, 2MP, 強アッパー: 2595
@@ -283,17 +284,24 @@ HKの2段目からは強ノヴァが繋がらない。
 
 ## 弱/中ネクサス
 
+- {空} 弱/中マイト, 中アッパー: 2120
 - {端} 弱/中グリード, 弱アッパー: 1960
 
 弱/中ネクサスは派生技に補正が載って安い。
 
-## 弱/中ネクサス(c)
+## "{空} 弱/中ネクサス"/"弱/中ネクサス(c)"
 
-- 弱/中ネクサス(c)-マイト, 中アッパー: 2220
-- 弱/中ネクサス(c)-ノヴァ, 弱ニー: 1720 42F
-- 弱/中ネクサス(c)-ノヴァ, SA1: 2560
-- 弱/中ネクサス(c)-マイト, SA2: 3340
-- 弱/中ネクサス(c)-マイト, 中アッパー, SA3: 4220
+- {空} 弱/中マイト, 中アッパー: 2120
+- {空} 弱/中ノヴァ, 強アッパー: 2100
+- {空} 弱/中ノヴァ, 弱ニー: 1620 42F
+- {空} 弱/中ノヴァ, DR 4HP, 強アッパー-h: 2724
+- {空} 弱/中ノヴァ, 6HK, SA1: 2670
+- {空} 弱/中マイト, SA2: 3240
+- {空} 弱/中ノヴァ, 6HK, SA2: 3027
+- {空} 弱/中マイト, 中アッパー, SA3: 4120
+- {空} 弱/中ノヴァ, DR 4HP, 強アッパー-h, SA3: 4304
+
+カウンターはダメージが100増える。
 
 ## 強/ODネクサス
 
