--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -1,6 +1,13 @@
-## MP(g): 2
+## DR 6LK(g): 1
 
-投げ間合いの外。
+- 2LP, LP, 弱ショット: -7で大足の外。
+- 2LP, LP, 弱ネクサス
+  - マイト, ガード: ヒットしても投げ間合いの外。
+- 投げ: 4F遅れ。
+
+投げ間合い。
+
+## MP(g): 2
 
 - 2LP: 無敵技以外で割り込めない
   - 2MP: 短い技を潰す、ジャンプで避けられる
@@ -10,29 +17,38 @@
     - 弱ニー(+6): 立ちガードされて-2の投げ間合い
     - {端} 2MP, ODニー: 弱攻撃を潰して、中攻撃以上は相打ち以上
     - ガード: 差し返し狙い
-- MP, 2MP: 短い技を潰す
+- MP, 2MP: 短い技を潰す、カウンターで繋がる
 - MP, 後退, 2MP: 差し返し気味に当てる
 
+投げ間合いの外。
+
+MP(g), MP(h), LPは届かないので、MP(g), MPルートにするなら2MPしかない。
+
 ## {屈} 弱ニー(+10): 2
+
+- 2LP/2LK, LP, 弱ニー
 
 投げ間合いの外。
 ニーの下りが当たる間合いで相手がしゃがんでいると持続当てになる。立っていると-3で投げ間合い。
 
-- 2LP/2LK, LP, 弱ニー
-
 ## DR 6MP(g): 2
 
 - MP(c), 2MP, ...: 相打ちも同じ。
-- MP(h),
+- MP(h), LP, ...: 中アッパーは(+1)になる
 - MP(g), LP, 弱ショット: -6で大足の外。
 
-## DR 6MP(g): 2
+MP(g)より少し近い。
 
-MP(g)とほぼ同じ。ヒット時もほぼ同じ。
+## {BO} ODニー: 2
+
+- 投げ
+- 後退: シミー
 
 ## 6HK: 4
 
-MP(g)より少し遠い。
+- 2MP, 中ネクサス
+
+MP(g)より少し遠い。しかもちょっと位置が変わるだけで距離が変わる。2MPが無難。
 
 ## DR MP(g): 6
 
