--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -294,12 +294,17 @@ HKの2段目からは強ノヴァが繋がらない。
 - {空} 弱/中マイト, 中アッパー: 2120
 - {空} 弱/中ノヴァ, 強アッパー: 2100
 - {空} 弱/中ノヴァ, 弱ニー: 1620 42F
+- {端|空} 弱/中ノヴァ, 4HP, 強アッパー-h: 2900
 - {空} 弱/中ノヴァ, DR 4HP, 強アッパー-h: 2724
+- {空} 弱/中ノヴァ, DR 2MP-HK, 強ニー: 2174 42F
 - {空} 弱/中ノヴァ, 6HK, SA1: 2670
 - {空} 弱/中マイト, SA2: 3240
 - {空} 弱/中ノヴァ, 6HK, SA2: 3027
 - {空} 弱/中マイト, 中アッパー, SA3: 4120
 - {空} 弱/中ノヴァ, DR 4HP, 強アッパー-h, SA3: 4304
+- {端|空} 弱/中ノヴァ, 4HP, 強ニー, 中アッパー, SA3: 4510
+
+ネクサス空中ヒットは弱/中でもノヴァが入って、マイトがバウンドになる。
 
 カウンターはダメージが100増える。
 
