--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -7,11 +7,12 @@
 
 ### 対空
 
+（対空練習）
+
 - 弱アッパー
-  - DR 6LK/6MP(h), 2MP
-  - DR 6LK/6MP(g), 2LP
-  - DR 6LK(g)
-    - 2LP, 2LP, 2MP
+  - DR 6LK/6MP, 2MP, 強ニー
+
+起き攻めは目押しで重ねて、フレームメーターで隙間がないのを確認する。
 
 ### 飛び道具と対空
 
