--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -244,13 +244,21 @@ HKの2段目からは強ノヴァが繋がらない。
 - DI(pc), ステップ, 4HP, 強ニー, SA2-6, DR 4HP, 強ニー, 中アッパー: 3882 (端から端まで運ぶ)
 - DI(pc), ステップ, 4HP, 強ニー, 中アッパー, SA3: 5350
 
-## {端} DI(壁)
+## {端|近} DI(壁), 4HP
 
-- {端} DI, 4HP, 強アッパー-h: 3400
-- {端} DI, 4HP, 中ニー, SA2: 3940
-- {端} DI, 4HP, 中ニー, 中アッパー, SA3: 4980
+- DI, 4HP, 強アッパー-h: 3400
+- DI, 4HP, 中ニー, SA2: 3940
+- DI, 4HP, 中ニー, 中アッパー, SA3: 4980
 
 4HPが届かなかったらDR 4HPにする。
+
+相手の頭が壁から離れるくらいまでは歩ける。
+
+中ニーは壁ドンが高いと当たらない。
+
+## {端|遠} DI(壁)
+
+- DI, 強アッパー-h: 3040 (近すぎると間に合わない)
 
 ## {遠} 中ショット/{空} 強ショット
 
@@ -367,3 +375,6 @@ HKの2段目からは強ノヴァが繋がらない。
 - 弱ネクサス(c)-マイト, 中アッパー
 
 - HK(相打ち), HK, 強ネクサス
+
+DI(壁), 4HPが届く時と届かない時でコンボが繋がらないのがある。
+強ネクサス、強アッパー-h直接、などは遠くないと繋がらないし、逆に4HP, 中ニーは端近くでないと繋がらない。
