--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -49,17 +49,19 @@ DリバはMP(pc)から。
 
 - 2MP, 強ニー: 2000
 - 2MP, 中マイト: 1740
-- {端} 2MP, ODニー, 弱アッパー: 2970
-- {端立} 2MP, OD上ショット, 6HK, 中アッパー: 3000
+- {端} 2MP, OD上ショット, 6HK, 中アッパー: 3000
+- {端} 2MP, OD上ショット, DR 4HP, 強アッパーh: 3500
 - {端} 2MP, CR HK, 強ノヴァ, 4HP, 強アッパー-h: 3381
-- {端} 2MP, ODニー, ODアッパー: 3320
 - 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h: 3465
-- 2MP, CR HK, 強ノヴァ, 6HK, SA1: 3215
-- 2MP, OD上ショット, SA1: 3140
 - 2MP-HK, SA1: 3360
+- 2MP, OD上ショット, SA1: 3140
+- {端} 2MP, OD上ショット, 6HK, SA1: 3440
+- 2MP, CR HK, 強ノヴァ, 6HK, SA1: 3215
+- 2MP, CR HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA1: 3690
 - 2MP-HK, SA2: 4000
 - 2MP-HK, SA3: 4800
 - 2MP, CR HK, 強ノヴァ, 6HK, SA2: 3755
+- {端} 2MP, OD上ショット, 6HK, 中アッパー, SA3: 5000
 - 2MP, CR HK, 強ノヴァ, 強アッパー, SA3: 4849
 - 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5125
 
@@ -227,12 +229,22 @@ HKの2段目からは強ノヴァが繋がらない。
 
 - {空} J.MP, 弱アッパー: 1800
 
-## J.HP
+## J.HP, 4HP
 
 - J.HP, 4HP, 強ニー, 弱アッパー: 3410
 - J.HP, 4HP, 中ショット, DR(中央では1-2F長め) 4HP, 強アッパー-h: 4060
+- J.HP, 4HP, 強ニー, ODアッパー: 3760
 - J.HP, 4HP, 強ニー, 弱アッパー, SA3: 5410
-- J.HP, 4HP, 中ショット, DR(中央では1-2F長め) 4HP, 強アッパー-h: 5550
+- J.HP, 4HP, 中ショット, DR(中央では1-2F長め) 4HP, 強ニー, 中アッパー, SA3: 5883 (端では弱アッパーまで、ショットカス当たりで5553)
+
+## J.HP, HK
+
+- {端} J.HP, HK(1), 強ノヴァ, 4HP, 強アッパー-h: 3780
+- J.HP, HK(1), 強ノヴァ, DR 4HP, 強アッパー-h: 3648
+- J.HP, HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA1: 4025
+- J.HP, HK(1), 強ノヴァ, 6HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 3770 (端から端まで運ぶ)
+- J.HP, HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA2: 4565
+- J.HP, HK, CR 6HK, 4HP, 強ニー, 弱アッパー, SA3: 5768
 
 ## DI(pc)
 
