--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -18,8 +18,8 @@
 
 （ダミー設定 > ガード: すべてガード）
 （ダミー設定 > 起き上がり: ランダム）
-（反撃設定 > ダウンリバーサル: 前方ジャンプ/垂直ジャンプ/何もしない）
-（反撃設定 > ガードリバーサル: 前方ジャンプ/垂直ジャンプ/何もしない）
+（反撃設定 > ダウンリバーサル: 前方ジャンプ/垂直ジャンプ）
+（反撃設定 > ガードリバーサル: 前方ジャンプ/垂直ジャンプ）
 
 - 前進, 強ショット, ガード
 - 前進, 中ショット, 強ショット, ガード: ジャンプできない距離を覚える
